version/0.31/_sources/api/solver/_autosummary/settings/create_periodic_interface.rst.txt
:orphan:

.. _create_periodic_interface:

create_periodic_interface
=========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.create_periodic_interface
    :show-inheritance:

.. rubric:: Arguments

==========================================   ===================================================================

Argument                                                                                                 Summary

==========================================   ===================================================================
:ref:`periodic_method <periodic_method>`                                  Method for creating periodic boundary.

:ref:`interface_name <interface_name>`                                     The name for this periodic interface.

:ref:`zone_name <zone_name_4>`                                           Id/name of zone to convert to periodic.

:ref:`shadow_zone_name <shadow_zone_name>`                                 Id/name of zone to convert to shadow.

:ref:`rotate_periodic <rotate_periodic_1>`                         Rotational or tranlational periodic boundary.

:ref:`new_origin <new_origin>`                                   Use a new origin instead of the default origin.

:ref:`origin <origin_2>`                                                      User specified origin of rotation.

:ref:`new_direction <new_direction>`             Use a new rotational axis/direction instead of the default one.

:ref:`direction <direction_1>`                                        User specified axis/direction of rotation.

:ref:`auto_offset <auto_offset>`                                        Automatically calculate periodic offset.

:ref:`angle_offset <angle_offset>`                                                            Angle of rotation.

:ref:`trans_offset <trans_offset>`                                                    Translation offset vector.

:ref:`create_periodic <create_periodic>`                                               Create periodic boundary.

:ref:`create_matching <create_matching>`                                              Create matching interface.

==========================================   ===================================================================

.. rubric:: Included in:

==================================   ============================

Parent                                                    Summary

==================================   ============================
:ref:`modify_zones <modify_zones>`       The modify zones object.

==================================   ============================

