version/0.35/_sources/api/solver/_autosummary/settings/create_periodic_interface.rst.txt
:orphan:

.. _create_periodic_interface:

create_periodic_interface
=========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.create_periodic_interface
    :show-inheritance:

.. rubric:: Arguments

==================================================   ===================================================================

Argument                                                                                                         Summary

==================================================   ===================================================================
:ref:`creation_method <creation_method>`                                          Method for creating periodic boundary.

:ref:`interface_name <interface_name>`                                                       Name of periodic interface.

:ref:`periodic_zone <periodic_zone>`                                             Id/name of zone to convert to periodic.

:ref:`shadow_zone <shadow_zone>`                                   Id/name of shadow zone to convert to periodic shadow.

:ref:`rotational_periodic <rotational_periodic>`                           Rotational or tranlational periodic boundary.

:ref:`update_origin <update_origin>`                                     Use a new origin instead of the default origin.

:ref:`origin <origin_5>`                                                              User specified origin of rotation.

:ref:`update_direction <update_direction>`               Use a new rotational axis/direction instead of the default one.

:ref:`direction <direction_1>`                                                User specified axis/direction of rotation.

:ref:`auto_compute_offset <auto_compute_offset>`                                  Automatically compute periodic offset.

:ref:`angular_offset <angular_offset>`                                                       Rotational periodic offset.

:ref:`translational_offset <translational_offset>`                                            Translation offset vector.

:ref:`create_periodic <create_periodic>`                                                       Create periodic boundary.

:ref:`create_matching <create_matching>`                                                      Create matching interface.

==================================================   ===================================================================

.. rubric:: Included in:

==================================   ============================

Parent                                                    Summary

==================================   ============================
:ref:`modify_zones <modify_zones>`       The modify zones object.

==================================   ============================

